# libOTe

./: CMakeLists.txt
frontend/: main.cpp  util.cpp  util.h
libOTe/Base/: MasnyRindal.h  MasnyRindalKyber.cpp  MasnyRindalKyber.h  SimplestOT.cpp  SimplestOT.h  naor-pinkas.cpp  naor-pinkas.h
libOTe/NChooseOne/: NcoOtExt.cpp  NcoOtExt.h
libOTe/NChooseOne/Kkrt/: KkrtNcoOtReceiver.cpp  KkrtNcoOtReceiver.h  KkrtNcoOtSender.cpp  KkrtNcoOtSender.h
libOTe/NChooseOne/Oos/: OosNcoOtReceiver.cpp  OosNcoOtReceiver.h  OosNcoOtSender.cpp  OosNcoOtSender.h
libOTe/Tools/: CoprotoSock.h  LinearCode.cpp
libOTe/TwoChooseOne/: KosOtExtReceiver.cpp  KosOtExtSender.cpp  OTExtInterface.cpp  OTExtInterface.h
libOTe_Tests/: BaseOT_Tests.cpp  BaseOT_Tests.h  NcoOT_Tests.cpp  OT_Tests.cpp  UnitTests.cpp
netio__/: CMakeLists.txt  netio_test.cpp
